package eaglesakura_ace;

import "AcesConstants.proto";
option java_package = "com.eaglesakura.andriders.protocol";

message FitnessPayload {
	// 体重
	required float weight = 1;

	// 安静心拍数
	required float normalHeartrate = 6;

	// 最大心拍数
	required float maxHeartrate = 5;

	// 現在のMETs値
	optional float mets = 4;

	// セッションで消費したcalorie
	optional float sessionCalories = 2;

	// 今日消費したカロリー
	optional float todayCalories = 3;
}